meshwide-mtls/peerauthn-multimatch.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "bookinfo"
spec:
  mtls:
    mode: STRICT
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "dup"
  namespace: "bookinfo"
spec:
  mtls:
    mode: STRICT
