meshwide-mtls/peerauthn-no-workload.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: details
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: workloadnotfound # warning
  mtls:
    mode: STRICT
