meshwide-mtls/policy-mtls-details.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: details
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: details
  mtls:
    mode: STRICT
