meshwide-mtls/policy-mtls-reviews.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      name: reviews
  mtls:
    mode: "STRICT"
