meshwide-mtls/dr-mtls-details.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: details
spec:
  host: details.bookinfo.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
