meshwide-mtls/istio-meshwide-mtls.yaml
##########
# This enables mTLS for the whole istio installation.
# The PeerAuthentication allows all the services to receive traffic in mTLS mode.
# The DestinationRule allows all the entities to start communications in mTLS mode.
##########
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
spec:
  mtls:
    mode: STRICT
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
